tests/src/frontend/typechecking/invalid/tunder_function_3.sk
fun foo(x: Int): void {
  _ = x;
  void
}

fun test(): (_ ~> void) {
  foo
}

fun main(): void {
  print_string("Pass")
}
